# bilichat-request

./: .dockerignore  .gitignore  Dockercompose.yaml  Dockerfile  README.md  docker-requirements.txt  flake.nix  pyproject.toml  start_server.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-runtime.yml  docker-build.yml  nix-docker.yml
docker/: Dockerfile  Dockerfile.old  Dockerfile.runtime  build-app.sh
docker/test-scripts/: build-runtime.sh
docs/: account.md  api-overview.md  content.md  subs.md  system.md  tools.md
src/bilichat_request/: account.py  config.py  exceptions.py  log.py  main.py
src/bilichat_request/account/: __init__.py  base.py
src/bilichat_request/adapters/browser/: __init__.py  browser_ctx.py  font.py  install_browser.py
src/bilichat_request/adapters/web/: __init__.py
src/bilichat_request/api/: __init__.py  account.py  base.py  content.py  render.py  subs.py  tools.py
src/bilichat_request/functions/: dynamic_content.py  tools.py
src/bilichat_request/functions/render/: column.py  dynamic.py
src/bilichat_request/functions/render/video/: __init__.py  style_blue.py
src/bilichat_request/functions/render/video/model/: video.py
src/bilichat_request/functions/subs/dynamic/: __init__.py  model.py
src/bilichat_request/functions/subs/live/: __init__.py
src/bilichat_request/model/: config.py
src/bilichat_request/render/: column.py  dynamic.py
src/bilichat_request/render/video/: __init__.py  style_blue.py
src/bilichat_request/render/video/model/: card.py  video.py
src/bilichat_request/static/browser/: mobile_style.js
tests/: __init__.py  start_server.py
