[project]
name = "bilichat-request"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Well404", email = "well_404@outlook.com"},
]
dependencies = ["playwright>=1.48.0", "httpx>=0.27.2", "jinja2>=3.1.4", "fastapi>=0.115.5", "loguru>=0.7.2", "bilireq>=0.2.13", "sentry-sdk>=2.19.0", "pypng>=0.20220715.0", "yarl>=1.18.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "None"}


[tool.pdm]
distribution = true
